--- a/HowtoGNUPLOT/HowtoGNUPLOT-09.html
+++ b/HowtoGNUPLOT/HowtoGNUPLOT-09.html
@@ -1,19 +1,44 @@
-<html>
-<title>How to use GNUPLOT: 6</title>
-<body>
-6. •¡”‚Ì”ŠwŠÖ”‚ğ•\¦‚·‚é‚É‚ÍAƒJƒ“ƒ}‚Å‹æØ‚Á‚Ä®‚ğ•À‚×‚é‚¾‚¯‚Å‚æ‚¢B<br>
-—á‚¦‚Î<tt> plot x, 2*x </tt> ‚Æ“ü—Í‚·‚é‚ÆŸ‚Ì‚æ‚¤‚É2–{‚Ì’¼ü‚ª•`‰æ‚³‚ê‚éB<br>
-<!--<font color="maroon">To display some graphs of functions, you only have to input them with comma as separator.</font>--><p>
-<img src="imgs/plot-06.gif"><p>
-®’†‚Ìl‘¥‰‰Z‚ÍCŒ¾Œê‚Æ“¯‚¶‹L–@‚ªg‚¦‚éB<br>
-‚½‚¾‚µ‚QæE‚Ræ‚È‚Ç‚Ì™p‚Í<tt> x**2 </tt>‚â<tt> x**3 </tt>‚Ì—l‚É•\‹L‚·‚éB<br>
-<!--<font color="maroon">You can write equations with the same notation as C-language.<br>
-But the power operation is described as <tt>x**2</tt> for square and <tt>x**3</tt> for cube.</font>--><p>
-‚È‚¨’è”‚ÌŒ^‚Ì–â‘è‚©‚çAŸ‚Ì‚Q‚Â‚Ìƒvƒƒbƒg–½—ß‚ÍˆÙ‚È‚éƒOƒ‰ƒt‚ğ•`‚­B<br>
-<!--<font color="maroon">Becase of type definition of constant, you will see different results from the following plot examples.</font>--><p>
-<tt>plot x,3/5*x</tt><br>
-<tt>plot x,3.0/5.0*x</tt><br>
-<img src="imgs/plot-06a.gif"><img src="imgs/plot-06b.gif"><p>
-<a href="HowtoGNUPLOT-08.html">‘O‚Ö(prev.)</a>E<a href="HowtoGNUPLOT-10.html">Ÿ‚Ö(next)</a>E<a href="Toc.html">–ÚŸ‚Ö(toc)</a>
-</body>
-</html>
+<!DOCTYPE html>
+
+<html lang="ja">
+
+	<head>
+		<meta charset="UTF-8">
+		<title>How to use GNUPLOT: 6</title>
+	</head>
+
+<body>
+
+6. è¤‡æ•°ã®æ•°å­¦é–¢æ•°ã‚’è¡¨ç¤ºã™ã‚‹ã«ã¯ã€ã‚«ãƒ³ãƒã§åŒºåˆ‡ã£ã¦å¼ã‚’ä¸¦ã¹ã‚‹ã ã‘ã§ã‚ˆã„ã€‚<br>
+
+ä¾‹ãˆã°<tt> plot x, 2*x </tt> ã¨å…¥åŠ›ã™ã‚‹ã¨æ¬¡ã®ã‚ˆã†ã«2æœ¬ã®ç›´ç·šãŒæç”»ã•ã‚Œã‚‹ã€‚<br>
+
+<!--<font color="maroon">To display some graphs of functions, you only have to input them with comma as separator.</font>--><p>
+
+<img src="imgs/plot-06.gif"><p>
+
+å¼ä¸­ã®å››å‰‡æ¼”ç®—ã¯Cè¨€èªã¨åŒã˜è¨˜æ³•ãŒä½¿ãˆã‚‹ã€‚<br>
+
+ãŸã ã—ï¼’ä¹—ãƒ»ï¼“ä¹—ãªã©ã®å†ªã¯<tt> x**2 </tt>ã‚„<tt> x**3 </tt>ã®æ§˜ã«è¡¨è¨˜ã™ã‚‹ã€‚<br>
+
+<!--<font color="maroon">You can write equations with the same notation as C-language.<br>
+
+But the power operation is described as <tt>x**2</tt> for square and <tt>x**3</tt> for cube.</font>--><p>
+
+ãªãŠå®šæ•°ã®å‹ã®å•é¡Œã‹ã‚‰ã€æ¬¡ã®ï¼’ã¤ã®ãƒ—ãƒ­ãƒƒãƒˆå‘½ä»¤ã¯ç•°ãªã‚‹ã‚°ãƒ©ãƒ•ã‚’æãã€‚<br>
+
+<!--<font color="maroon">Becase of type definition of constant, you will see different results from the following plot examples.</font>--><p>
+
+<tt>plot x,3/5*x</tt><br>
+
+<tt>plot x,3.0/5.0*x</tt><br>
+
+<img src="imgs/plot-06a.gif"><img src="imgs/plot-06b.gif"><p>
+
+<a href="HowtoGNUPLOT-08.html">å‰ã¸(prev.)</a>ãƒ»<a href="HowtoGNUPLOT-10.html">æ¬¡ã¸(next)</a>ãƒ»<a href="Toc.html">ç›®æ¬¡ã¸(toc)</a>
+
+</body>
+
+</html>
+
+
