--- a/HowtoGNUPLOT/HowtoGNUPLOT-08.html
+++ b/HowtoGNUPLOT/HowtoGNUPLOT-08.html
@@ -1,21 +1,48 @@
-<html>
-<title>How to use GNUPLOT: 5</title>
-<body>
-5. •ûŠáƒ‚[ƒh‚©‚ç”²‚¯‚é‚É‚Í<tt> set nogrid </tt>‚Æ“ü—Í‚·‚éB<br>
-‘±‚¯‚Ä<tt> replot </tt>‚ğ“ü—Í‚·‚é‚ÆŸ‚Ì’Ê‚èB<br>
-<!--<font color="maroon">If you want to drop grid lines, type "<tt>set nogrid</tt>".<br>
-And then <tt>replot</tt> results the following.</font>--><p>
-<img src="imgs/plot-03.gif"></p>
-•ûŠáƒ‚[ƒh‚ğŠÜ‚ß‚ÄA‚¢‚­‚Â‚©‚Ìƒ‚[ƒhİ’è‚Å‚Í<tt> set AAAA </tt>‚Æİ’è‚µ‚½‚à‚Ì‚É‘Î‚µ‚ÄA<br>
-<tt> set noAAAA </tt>‚Æ“ü—Í‚·‚ê‚Îİ’èó‘Ô‚ªu”½“]v‚·‚éB<br>
-<!--<font color="maroon">For some mode selections, including graph paper mode,<br>
-<tt>set AAA</tt> means to turn on that mode, and <tt>set noAAA</tt> means to turn off.</font>--><p>
-
-  <hr>
-  <h3>TIPS</h3>
-<p>ƒOƒ‰ƒtƒEƒBƒ“ƒhƒE‚ğƒAƒNƒeƒBƒu‚É‚µ‚ÄA'g' ‚ğ‰Ÿ‚µ‚Ä‚à•ûŠáƒ‚[ƒh‚Ì On/Off ‚ªØ‚è‘Ö‚í‚éB</p>
-<hr>
-  
-<a href="HowtoGNUPLOT-07.html">‘O‚Ö(prev.)</a>E<a href="HowtoGNUPLOT-09.html">Ÿ‚Ö(next)</a>E<a href="Toc.html">–ÚŸ‚Ö(toc)</a>
-</body>
-</html>
+<!DOCTYPE html>
+
+<html lang="ja">
+
+	<head>
+		<meta charset="UTF-8">
+		<title>How to use GNUPLOT: 5</title>
+	</head>
+
+<body>
+
+5. æ–¹çœ¼ãƒ¢ãƒ¼ãƒ‰ã‹ã‚‰æŠœã‘ã‚‹ã«ã¯<tt> set nogrid </tt>ã¨å…¥åŠ›ã™ã‚‹ã€‚<br>
+
+ç¶šã‘ã¦<tt> replot </tt>ã‚’å…¥åŠ›ã™ã‚‹ã¨æ¬¡ã®é€šã‚Šã€‚<br>
+
+<!--<font color="maroon">If you want to drop grid lines, type "<tt>set nogrid</tt>".<br>
+
+And then <tt>replot</tt> results the following.</font>--><p>
+
+<img src="imgs/plot-03.gif"></p>
+
+æ–¹çœ¼ãƒ¢ãƒ¼ãƒ‰ã‚’å«ã‚ã¦ã€ã„ãã¤ã‹ã®ãƒ¢ãƒ¼ãƒ‰è¨­å®šã§ã¯<tt> set AAAA </tt>ã¨è¨­å®šã—ãŸã‚‚ã®ã«å¯¾ã—ã¦ã€<br>
+
+<tt> set noAAAA </tt>ã¨å…¥åŠ›ã™ã‚Œã°è¨­å®šçŠ¶æ…‹ãŒã€Œåè»¢ã€ã™ã‚‹ã€‚<br>
+
+<!--<font color="maroon">For some mode selections, including graph paper mode,<br>
+
+<tt>set AAA</tt> means to turn on that mode, and <tt>set noAAA</tt> means to turn off.</font>--><p>
+
+
+
+  <hr>
+
+  <h3>TIPS</h3>
+
+<p>ã‚°ãƒ©ãƒ•ã‚¦ã‚£ãƒ³ãƒ‰ã‚¦ã‚’ã‚¢ã‚¯ãƒ†ã‚£ãƒ–ã«ã—ã¦ã€'g' ã‚’æŠ¼ã—ã¦ã‚‚æ–¹çœ¼ãƒ¢ãƒ¼ãƒ‰ã® On/Off ãŒåˆ‡ã‚Šæ›¿ã‚ã‚‹ã€‚</p>
+
+<hr>
+
+  
+
+<a href="HowtoGNUPLOT-07.html">å‰ã¸(prev.)</a>ãƒ»<a href="HowtoGNUPLOT-09.html">æ¬¡ã¸(next)</a>ãƒ»<a href="Toc.html">ç›®æ¬¡ã¸(toc)</a>
+
+</body>
+
+</html>
+
+
