--- a/HowtoGNUPLOT/HowtoGNUPLOT-07.html
+++ b/HowtoGNUPLOT/HowtoGNUPLOT-07.html
@@ -1,27 +1,60 @@
-<html>
-<title>How to use GNUPLOT: 4</title>
-<body>
-4. ”wŒi‚É•ûŠá‚ğ•`‚«‚½‚¢‚Æ‚«‚ÍA<br>
-<!--<font color="maroon">If you want to draw like graph paper, input the following.</font>--><p>
-<tt> set grid</tt><p>
-‚Æ“ü—Í‚·‚éB‚½‚¾‚µA“ü—Í‚µ‚Ä‚à‰æ–Ê‚É‚Í‚·‚®‚É”½‰f‚µ‚È‚¢B<br>
-set ‚Í•`‰æ‚È‚Ç‚Ìƒ‚[ƒh‚ğw’èEØ‚è‘Ö‚¦‚é–½—ß‚ÅAŸ‰ñ‚Ì•`‰æ‚Ü‚½‚ÍŠeí“®ì‚É
-”½‰f‚³‚ê‚éB<br>
-•ûŠáƒ‚[ƒh‚É‚µ‚ÄÄ•`‰æ‚µ‚æ‚¤B
-Ä•`‰æ‚·‚é‚½‚ß‚É‚ÍA‚¢‚Â‚Å‚à<tt> replot </tt>‚Æ“ü—Í‚·‚é‚¾‚¯‚Å‚æ‚¢B<br>
-<!--<font color="maroon">After input the above, however, the screen is not changed at once.<br>
-"set" is the instruction of mode selection, and it effects the next drawing.<br>
-  Let us draw with graph paper mode. To type simply "replot" means to redraw.</font>--><p>
-<img src="imgs/plot-04.gif"><p>
-
-  <hr>
-  <h3>TIPS</h3>
-<p>ƒOƒ‰ƒtƒEƒBƒ“ƒhƒE‚ğƒAƒNƒeƒBƒu‚É‚µ‚ÄA'g' ‚ğ‰Ÿ‚µ‚Ä‚à•ûŠáƒ‚[ƒh‚Ì On/Off ‚ªØ‚è‘Ö‚í‚éB</p>
-<p>ƒOƒ‰ƒtƒEƒBƒ“ƒhƒE‚ğƒAƒNƒeƒBƒu‚É‚µ‚ÄA'e' ‚ğ‰Ÿ‚µ‚Ä‚à replot ‚³‚ê‚éB</p>
-
-<hr>
-
-
-  <a href="HowtoGNUPLOT-06.html">‘O‚Ö(prev.)</a>E<a href="HowtoGNUPLOT-08.html">Ÿ‚Ö(next)</a>E<a href="Toc.html">–ÚŸ‚Ö(toc)</a>
-</body>
-</html>
+<!DOCTYPE html>
+
+<html lang="ja">
+
+	<head>
+		<meta charset="UTF-8">
+		<title>How to use GNUPLOT: 4</title>
+	</head>
+
+<body>
+
+4. èƒŒæ™¯ã«æ–¹çœ¼ã‚’æããŸã„ã¨ãã¯ã€<br>
+
+<!--<font color="maroon">If you want to draw like graph paper, input the following.</font>--><p>
+
+<tt> set grid</tt><p>
+
+ã¨å…¥åŠ›ã™ã‚‹ã€‚ãŸã ã—ã€å…¥åŠ›ã—ã¦ã‚‚ç”»é¢ã«ã¯ã™ãã«åæ˜ ã—ãªã„ã€‚<br>
+
+set ã¯æç”»ãªã©ã®ãƒ¢ãƒ¼ãƒ‰ã‚’æŒ‡å®šãƒ»åˆ‡ã‚Šæ›¿ãˆã‚‹å‘½ä»¤ã§ã€æ¬¡å›ã®æç”»ã¾ãŸã¯å„ç¨®å‹•ä½œæ™‚ã«
+
+åæ˜ ã•ã‚Œã‚‹ã€‚<br>
+
+æ–¹çœ¼ãƒ¢ãƒ¼ãƒ‰ã«ã—ã¦å†æç”»ã—ã‚ˆã†ã€‚
+
+å†æç”»ã™ã‚‹ãŸã‚ã«ã¯ã€ã„ã¤ã§ã‚‚<tt> replot </tt>ã¨å…¥åŠ›ã™ã‚‹ã ã‘ã§ã‚ˆã„ã€‚<br>
+
+<!--<font color="maroon">After input the above, however, the screen is not changed at once.<br>
+
+"set" is the instruction of mode selection, and it effects the next drawing.<br>
+
+  Let us draw with graph paper mode. To type simply "replot" means to redraw.</font>--><p>
+
+<img src="imgs/plot-04.gif"><p>
+
+
+
+  <hr>
+
+  <h3>TIPS</h3>
+
+<p>ã‚°ãƒ©ãƒ•ã‚¦ã‚£ãƒ³ãƒ‰ã‚¦ã‚’ã‚¢ã‚¯ãƒ†ã‚£ãƒ–ã«ã—ã¦ã€'g' ã‚’æŠ¼ã—ã¦ã‚‚æ–¹çœ¼ãƒ¢ãƒ¼ãƒ‰ã® On/Off ãŒåˆ‡ã‚Šæ›¿ã‚ã‚‹ã€‚</p>
+
+<p>ã‚°ãƒ©ãƒ•ã‚¦ã‚£ãƒ³ãƒ‰ã‚¦ã‚’ã‚¢ã‚¯ãƒ†ã‚£ãƒ–ã«ã—ã¦ã€'e' ã‚’æŠ¼ã—ã¦ã‚‚ replot ã•ã‚Œã‚‹ã€‚</p>
+
+
+
+<hr>
+
+
+
+
+
+  <a href="HowtoGNUPLOT-06.html">å‰ã¸(prev.)</a>ãƒ»<a href="HowtoGNUPLOT-08.html">æ¬¡ã¸(next)</a>ãƒ»<a href="Toc.html">ç›®æ¬¡ã¸(toc)</a>
+
+</body>
+
+</html>
+
+
