--- a/HowtoGNUPLOT/HowtoGNUPLOT-06.html
+++ b/HowtoGNUPLOT/HowtoGNUPLOT-06.html
@@ -1,19 +1,44 @@
-<html>
-<title>How to use GNUPLOT: 3</title>
-<body>
-3. c²‚Ì”ÍˆÍ‚àw’è‚µ‚½‚¢ê‡‚ÍŸ‚Ì’Ê‚èB<br>
-<!--<font color="maroon">To specify the range of both a vertical and a horizontal axis, the form is <tt>plot [xmin:xmax][ymin:ymax]</tt>.</font>-->
-<p><tt> plot [0:10][0:20] x</tt></p>
-<p><img src="imgs/plot-03.gif"></p>
-<p>c²‚Ì‚İw’è‚µ‚½‚¢ê‡‚Í<tt> plot [][0:20] x </tt>‚Æ‚·‚éB<br>
-<!--  <font color="maroon">To specify only the range of a vertical axis, the form is <tt>plot [][ymin:ymax]</tt>.</font>--></p>
-<hr>
-  <h3>TIPS</h3>
-<p>ƒ}ƒEƒX‰Eƒ{ƒ^ƒ“‚Å—Ìˆæ‚ğƒhƒ‰ƒbƒO‚µ‚Ä‚àA‚»‚Ì•”•ª‚ªŠg‘å•\¦‚³‚ê‚éD</p>
-<p>Œ³‚Ì•`‰æ”ÍˆÍ‚É–ß‚·‚É‚ÍCunzoom('u')C—š—ğ‚Ì‘OŒã‚É‚Í@‘OŒó•â('p)CŒãŒó•â('n') ‚Åw’è‚·‚éD'a' ‚Å©“®kÚD </p>
-<hr>
- 
-
-<a href="HowtoGNUPLOT-05.html">‘O‚Ö(prev.)</a>E<a href="HowtoGNUPLOT-07.html">Ÿ‚Ö(next)</a>E<a href="Toc.html">–ÚŸ‚Ö(toc)</a>
-</body>
-</html>
+<!DOCTYPE html>
+
+<html lang="ja">
+
+	<head>
+		<meta charset="UTF-8">
+		<title>How to use GNUPLOT: 3</title>
+	</head>
+
+<body>
+
+3. ç¸¦è»¸ã®ç¯„å›²ã‚‚æŒ‡å®šã—ãŸã„å ´åˆã¯æ¬¡ã®é€šã‚Šã€‚<br>
+
+<!--<font color="maroon">To specify the range of both a vertical and a horizontal axis, the form is <tt>plot [xmin:xmax][ymin:ymax]</tt>.</font>-->
+
+<p><tt> plot [0:10][0:20] x</tt></p>
+
+<p><img src="imgs/plot-03.gif"></p>
+
+<p>ç¸¦è»¸ã®ã¿æŒ‡å®šã—ãŸã„å ´åˆã¯<tt> plot [][0:20] x </tt>ã¨ã™ã‚‹ã€‚<br>
+
+<!--  <font color="maroon">To specify only the range of a vertical axis, the form is <tt>plot [][ymin:ymax]</tt>.</font>--></p>
+
+<hr>
+
+  <h3>TIPS</h3>
+
+<p>ãƒã‚¦ã‚¹å³ãƒœã‚¿ãƒ³ã§é ˜åŸŸã‚’ãƒ‰ãƒ©ãƒƒã‚°ã—ã¦ã‚‚ã€ãã®éƒ¨åˆ†ãŒæ‹¡å¤§è¡¨ç¤ºã•ã‚Œã‚‹ï¼</p>
+
+<p>å…ƒã®æç”»ç¯„å›²ã«æˆ»ã™ã«ã¯ï¼Œunzoom('u')ï¼Œå±¥æ­´ã®å‰å¾Œã«ã¯ã€€å‰å€™è£œ('p)ï¼Œå¾Œå€™è£œ('n') ã§æŒ‡å®šã™ã‚‹ï¼'a' ã§è‡ªå‹•ç¸®å°ºï¼ </p>
+
+<hr>
+
+ 
+
+
+
+<a href="HowtoGNUPLOT-05.html">å‰ã¸(prev.)</a>ãƒ»<a href="HowtoGNUPLOT-07.html">æ¬¡ã¸(next)</a>ãƒ»<a href="Toc.html">ç›®æ¬¡ã¸(toc)</a>
+
+</body>
+
+</html>
+
+
