--- a/HowtoGNUPLOT/HowtoGNUPLOT-04.html
+++ b/HowtoGNUPLOT/HowtoGNUPLOT-04.html
@@ -1,27 +1,60 @@
-<html>
-<title>How to use GNUPLOT: 1</title>
-<body>
-<center>
-<hr>
-<font size=6>GNUPLOT‚Ìg‚¢•û / How to use GNUPLOT</font>
-<hr>
-</center>
-‚±‚±‚©‚çæ‚ÍAGNUPLOT‚ÌŠî–{‹@”\‚Ìg‚¢•û‚ğ‚P•à‚¸‚ÂŠw‚ñ‚Å‚¢‚­B<br>
-ˆê“xƒRƒ}ƒ“ƒh‚ğŠo‚¦‚ê‚Î‚Æ‚Ä‚à•Ö—˜‚©‚Â‹­—Í‚È–¡•û‚É‚È‚éƒf[ƒ^‰ğÍƒ\ƒtƒg‚È‚Ì‚ÅA
-‚º‚Ğ‚±‚Ì‹@‰ï‚Éƒ}ƒXƒ^[‚µ‚æ‚¤B<br>
-<!--<font color="maroon">Letfs study the basic functions of GNUPLOT, step by step, from this section.<br>
-This GNUPLOT is very powerful and useful tool for data analyzing. This lecture is good chance to master!</font>--><p>
-
-1. ‚Æ‚É‚©‚­ƒvƒƒbƒg‚µ‚Ä‚İ‚éB<br>
-<!--<font color="maroon">Letfs plot something first of all.</font>--><p>
-<img src="imgs/plot-01a.gif" alt="ƒRƒ}ƒ“ƒhƒEƒBƒ“ƒhƒE command window"><p>
-ƒvƒƒ“ƒvƒg<tt>gnuplot></tt>‚É‘±‚¯‚ÄAƒRƒ}ƒ“ƒh‚ğ“ü—Í‚·‚éB<br>
-<!--<font color="maroon">Input a command after prompt ggnuplot>h. </font>--><p>
-<tt>plot x</tt><p>
-plot–½—ß‚Í—^‚¦‚ç‚ê‚½”ŠwŠÖ”y=f(x)‚ğ•`‰æ‚·‚éB
-•Ê‚ÌƒEƒBƒ“ƒhƒE‚ªŠJ‚¢‚ÄŒ‹‰Ê‚ª•\¦‚³‚ê‚éB<br>
-<!--<font color="maroon">A plot command draws given mathematics function y=f (x). Another window opens and a result is displayed. </font>--><p>
-<img src="imgs/plot-01.gif" alt="ƒOƒ‰ƒtƒEƒBƒ“ƒhƒE graph window"><p>
-<a href="HowtoGNUPLOT-03.html">‘O‚Ö(prev.)</a>E<a href="HowtoGNUPLOT-05.html">Ÿ‚Ö(next)</a>E<a href="Toc.html">–ÚŸ‚Ö(toc)</a>
-</body>
-</html>
+<!DOCTYPE html>
+
+<html lang="ja">
+
+	<head>
+		<meta charset="UTF-8">
+		<title>How to use GNUPLOT: 1</title>
+	</head>
+
+<body>
+
+<center>
+
+<hr>
+
+<font size=6>GNUPLOTã®ä½¿ã„æ–¹ / How to use GNUPLOT</font>
+
+<hr>
+
+</center>
+
+ã“ã“ã‹ã‚‰å…ˆã¯ã€GNUPLOTã®åŸºæœ¬æ©Ÿèƒ½ã®ä½¿ã„æ–¹ã‚’ï¼‘æ­©ãšã¤å­¦ã‚“ã§ã„ãã€‚<br>
+
+ä¸€åº¦ã‚³ãƒãƒ³ãƒ‰ã‚’è¦šãˆã‚Œã°ã¨ã¦ã‚‚ä¾¿åˆ©ã‹ã¤å¼·åŠ›ãªå‘³æ–¹ã«ãªã‚‹ãƒ‡ãƒ¼ã‚¿è§£æã‚½ãƒ•ãƒˆãªã®ã§ã€
+
+ãœã²ã“ã®æ©Ÿä¼šã«ãƒã‚¹ã‚¿ãƒ¼ã—ã‚ˆã†ã€‚<br>
+
+<!--<font color="maroon">Letâ€™s study the basic functions of GNUPLOT, step by step, from this section.<br>
+
+This GNUPLOT is very powerful and useful tool for data analyzing. This lecture is good chance to master!</font>--><p>
+
+
+
+1. ã¨ã«ã‹ããƒ—ãƒ­ãƒƒãƒˆã—ã¦ã¿ã‚‹ã€‚<br>
+
+<!--<font color="maroon">Letâ€™s plot something first of all.</font>--><p>
+
+<img src="imgs/plot-01a.gif" alt="ã‚³ãƒãƒ³ãƒ‰ã‚¦ã‚£ãƒ³ãƒ‰ã‚¦ command window"><p>
+
+ãƒ—ãƒ­ãƒ³ãƒ—ãƒˆ<tt>gnuplot></tt>ã«ç¶šã‘ã¦ã€ã‚³ãƒãƒ³ãƒ‰ã‚’å…¥åŠ›ã™ã‚‹ã€‚<br>
+
+<!--<font color="maroon">Input a command after prompt â€œgnuplot>â€. </font>--><p>
+
+<tt>plot x</tt><p>
+
+plotå‘½ä»¤ã¯ä¸ãˆã‚‰ã‚ŒãŸæ•°å­¦é–¢æ•°y=f(x)ã‚’æç”»ã™ã‚‹ã€‚
+
+åˆ¥ã®ã‚¦ã‚£ãƒ³ãƒ‰ã‚¦ãŒé–‹ã„ã¦çµæœãŒè¡¨ç¤ºã•ã‚Œã‚‹ã€‚<br>
+
+<!--<font color="maroon">A plot command draws given mathematics function y=f (x). Another window opens and a result is displayed. </font>--><p>
+
+<img src="imgs/plot-01.gif" alt="ã‚°ãƒ©ãƒ•ã‚¦ã‚£ãƒ³ãƒ‰ã‚¦ graph window"><p>
+
+<a href="HowtoGNUPLOT-03.html">å‰ã¸(prev.)</a>ãƒ»<a href="HowtoGNUPLOT-05.html">æ¬¡ã¸(next)</a>ãƒ»<a href="Toc.html">ç›®æ¬¡ã¸(toc)</a>
+
+</body>
+
+</html>
+
+
