--- a/HowtoGNUPLOT/HowtoGNUPLOT-03.html
+++ b/HowtoGNUPLOT/HowtoGNUPLOT-03.html
@@ -1,18 +1,42 @@
-<html>
-<title>How to configure GNUPLOT: 3</title>
-<body>
-3. İ’è‚µ‚½Œ‹‰Ê‚ğwgnuplot.iniƒtƒ@ƒCƒ‹‚Æ‚µ‚Ä‹L˜^‚·‚éB<br>
-<!--<font color="maroon">The set-up configuration is recorded as gwgnuplot.inih file.
-</font>--><p>
-ƒEƒBƒ“ƒhƒE“à‚Å‰EƒNƒŠƒbƒN‚µA¡“x‚Í"Update wgnuplot.ini"‚ğ‘I‘ğ‚·‚éB<br>
-<!--<font color="maroon">Click the right button within the window, and select "Update wgnuplot.ini".
-</font>--><p>
-<img src="imgs/fontset-3.gif" alt="ƒEƒBƒ“ƒhƒE“à‚Å‰EƒNƒŠƒbƒN"><p>
-ƒVƒXƒeƒ€ƒtƒHƒ‹ƒ_“à‚Éwgnuplot.ini‚ªì¬‚³‚êAŸ‰ñ‹N“®‚©‚ç‚Íw’è‚µ‚½ƒtƒHƒ“ƒg‚Å•\¦‚³‚ê‚éB<br>
-‚±‚Ì—á‚Í10ƒ|ƒCƒ“ƒg‚Ìê‡B<br>
-<!--<font color="maroon">Click the right button within the window, and select "Update wgnuplot.ini".
-<br>
-This example shows a case of 14 pt.</font>--><p>
-<a href="HowtoGNUPLOT-01.html">‘O‚Ö(prev.)</a>E<a href="HowtoGNUPLOT-04.html">Ÿ‚Ö(next)</a>E<a href="Toc.html">–ÚŸ‚Ö(toc)</a>
-</body>
-</html>
+<!DOCTYPE html>
+
+<html lang="ja">
+
+	<head>
+		<meta charset="UTF-8">
+    <title>How to configure GNUPLOT: 3</title>
+	</head>
+
+<body>
+
+3. è¨­å®šã—ãŸçµæœã‚’wgnuplot.iniãƒ•ã‚¡ã‚¤ãƒ«ã¨ã—ã¦è¨˜éŒ²ã™ã‚‹ã€‚<br>
+
+<!--<font color="maroon">The set-up configuration is recorded as â€œwgnuplot.iniâ€ file.
+
+</font>--><p>
+
+ã‚¦ã‚£ãƒ³ãƒ‰ã‚¦å†…ã§å³ã‚¯ãƒªãƒƒã‚¯ã—ã€ä»Šåº¦ã¯"Update wgnuplot.ini"ã‚’é¸æŠã™ã‚‹ã€‚<br>
+
+<!--<font color="maroon">Click the right button within the window, and select "Update wgnuplot.ini".
+
+</font>--><p>
+
+<img src="imgs/fontset-3.gif" alt="ã‚¦ã‚£ãƒ³ãƒ‰ã‚¦å†…ã§å³ã‚¯ãƒªãƒƒã‚¯"><p>
+
+ã‚·ã‚¹ãƒ†ãƒ ãƒ•ã‚©ãƒ«ãƒ€å†…ã«wgnuplot.iniãŒä½œæˆã•ã‚Œã€æ¬¡å›èµ·å‹•æ™‚ã‹ã‚‰ã¯æŒ‡å®šã—ãŸãƒ•ã‚©ãƒ³ãƒˆã§è¡¨ç¤ºã•ã‚Œã‚‹ã€‚<br>
+
+ã“ã®ä¾‹ã¯10ãƒã‚¤ãƒ³ãƒˆã®å ´åˆã€‚<br>
+
+<!--<font color="maroon">Click the right button within the window, and select "Update wgnuplot.ini".
+
+<br>
+
+This example shows a case of 14 pt.</font>--><p>
+
+<a href="HowtoGNUPLOT-01.html">å‰ã¸(prev.)</a>ãƒ»<a href="HowtoGNUPLOT-04.html">æ¬¡ã¸(next)</a>ãƒ»<a href="Toc.html">ç›®æ¬¡ã¸(toc)</a>
+
+</body>
+
+</html>
+
+
