--- a/HowtoGNUPLOT/HowtoGNUPLOT-02.html
+++ b/HowtoGNUPLOT/HowtoGNUPLOT-02.html
@@ -1,14 +1,34 @@
-<html>
-<title>How to configure GNUPLOT: 2</title>
-<body>
-2. ƒtƒHƒ“ƒg‘I‘ğ‰æ–Ê‚ªŒ»‚ê‚é‚Ì‚ÅA“K“–‚Èƒ|ƒCƒ“ƒg”‚ğ‘I‘ğ‚·‚éB<br>
-<font color="maroon">Choose the suitable point size at a font selection screen.</font><p>
-<img src="imgs/fontset-2.gif"><p>
-10‚©14ƒ|ƒCƒ“ƒg‚ ‚½‚è‚ª—Ç‚³‚»‚¤‚¾B<br>
-<font color="maroon">We recommend 10 points or 14 points.</font><p>
-
-‚¿‚È‚İ‚Éˆóü‚Ì¢ŠE‚Å‚Í•¶š‚Ì‘å‚«‚³‚ğ•\‚·1ƒ|ƒCƒ“ƒg‚Í‚¨‚æ‚»0.3mmB<br>
-<font color="maroon">1 point of character size means about 0.3mm in print industry.</font><p>
-<a href="HowtoGNUPLOT-01.html">‘O‚Ö(prev.)</a>E<a href="HowtoGNUPLOT-03.html">Ÿ‚Ö(next)</a>E<a href="Toc.html">–ÚŸ‚Ö(toc)</a>
-</body>
-</html>
+<!DOCTYPE html>
+
+<html lang="ja">
+
+	<head>
+		<meta charset="UTF-8">
+    <title>How to configure GNUPLOT: 2</title>
+	</head>
+
+<body>
+
+2. ãƒ•ã‚©ãƒ³ãƒˆé¸æŠç”»é¢ãŒç¾ã‚Œã‚‹ã®ã§ã€é©å½“ãªãƒã‚¤ãƒ³ãƒˆæ•°ã‚’é¸æŠã™ã‚‹ã€‚<br>
+
+<font color="maroon">Choose the suitable point size at a font selection screen.</font><p>
+
+<img src="imgs/fontset-2.gif"><p>
+
+10ã‹14ãƒã‚¤ãƒ³ãƒˆã‚ãŸã‚ŠãŒè‰¯ã•ãã†ã ã€‚<br>
+
+<font color="maroon">We recommend 10 points or 14 points.</font><p>
+
+
+
+ã¡ãªã¿ã«å°åˆ·ã®ä¸–ç•Œã§ã¯æ–‡å­—ã®å¤§ãã•ã‚’è¡¨ã™1ãƒã‚¤ãƒ³ãƒˆã¯ãŠã‚ˆã0.3mmã€‚<br>
+
+<font color="maroon">1 point of character size means about 0.3mm in print industry.</font><p>
+
+<a href="HowtoGNUPLOT-01.html">å‰ã¸(prev.)</a>ãƒ»<a href="HowtoGNUPLOT-03.html">æ¬¡ã¸(next)</a>ãƒ»<a href="Toc.html">ç›®æ¬¡ã¸(toc)</a>
+
+</body>
+
+</html>
+
+
