--- a/HowtoGNUPLOT/HowtoGNUPLOT-00.html
+++ b/HowtoGNUPLOT/HowtoGNUPLOT-00.html
@@ -1,25 +1,56 @@
-<html>
-<title>How to configure GNUPLOT: 0</title>
-<body>
-<center>
-<font size=6>GNUPLOT‚Ìİ’è<!-- / How to configure GNUPLOT--></font>
-</center>
-1. ì‹ÆƒtƒHƒ‹ƒ_‚Ìw’è<br>
-<!--<font color="maroon">Set work folder.</font>--><p>
-
-wgnuplot.exe‚ÌƒVƒ‡[ƒgƒJƒbƒg‚ğƒfƒXƒNƒgƒbƒvã‚Éì¬‚·‚éB<br>
-‚³‚ç‚ÉAƒVƒ‡[ƒgƒJƒbƒgƒAƒCƒRƒ“ã‚Å‰EƒNƒŠƒbƒN‚µ‚ÄuƒvƒƒpƒeƒBv‚ğ‘I‘ğB<br>
-<!--<font color="maroon">Put short-cut of wgnuplot.exe on desk top.<br>
-Click right button on gnuplot icon, and select "property" in menu bar.</font>--><p>
-
-<img src="imgs/setup-1.gif"><p>
-uƒVƒ‡[ƒgƒJƒbƒgv‚ğ‘I‘ğ‚µAì‹ÆƒtƒHƒ‹ƒ_—“‚É¡Œãƒf[ƒ^ƒtƒ@ƒCƒ‹‚ğ’u‚­ƒtƒHƒ‹ƒ_‚Ö‚ÌƒpƒX‚ğ‹LqB<br>
-‚±‚Ìu‹`‚Ì•W€‚Í<tt> "C:\home\ecs1" </tt>‚É‚µ‚æ‚¤B<br>
-<!--<font color="maroon">Choose short-cut tab and write the path to the folder where we will put data files.<br>
-Our recommendation, standard setting of this course, is <tt>"C:\home\ecs1"</tt>.</font>--><p> 
-
-<img src="imgs/setup-2.png"><p>
-
-<a href="HowtoGNUPLOT-01.html">Ÿ‚Ö(next)</a>E<a href="Toc.html">–ÚŸ(toc)</a>
-</body>
-</html>
+<!DOCTYPE html>
+
+<html lang="ja">
+
+	<head>
+		<meta charset="UTF-8">
+    <title>How to configure GNUPLOT: 0</title>
+	</head>
+
+<body>
+
+<center>
+
+<font size=6>GNUPLOTã®è¨­å®š<!-- / How to configure GNUPLOT--></font>
+
+</center>
+
+1. ä½œæ¥­ãƒ•ã‚©ãƒ«ãƒ€ã®æŒ‡å®š<br>
+
+<!--<font color="maroon">Set work folder.</font>--><p>
+
+
+
+wgnuplot.exeã®ã‚·ãƒ§ãƒ¼ãƒˆã‚«ãƒƒãƒˆã‚’ãƒ‡ã‚¹ã‚¯ãƒˆãƒƒãƒ—ä¸Šã«ä½œæˆã™ã‚‹ã€‚<br>
+
+ã•ã‚‰ã«ã€ã‚·ãƒ§ãƒ¼ãƒˆã‚«ãƒƒãƒˆã‚¢ã‚¤ã‚³ãƒ³ä¸Šã§å³ã‚¯ãƒªãƒƒã‚¯ã—ã¦ã€Œãƒ—ãƒ­ãƒ‘ãƒ†ã‚£ã€ã‚’é¸æŠã€‚<br>
+
+<!--<font color="maroon">Put short-cut of wgnuplot.exe on desk top.<br>
+
+Click right button on gnuplot icon, and select "property" in menu bar.</font>--><p>
+
+
+
+<img src="imgs/setup-1.gif"><p>
+
+ã€Œã‚·ãƒ§ãƒ¼ãƒˆã‚«ãƒƒãƒˆã€ã‚’é¸æŠã—ã€ä½œæ¥­ãƒ•ã‚©ãƒ«ãƒ€æ¬„ã«ä»Šå¾Œãƒ‡ãƒ¼ã‚¿ãƒ•ã‚¡ã‚¤ãƒ«ã‚’ç½®ããƒ•ã‚©ãƒ«ãƒ€ã¸ã®ãƒ‘ã‚¹ã‚’è¨˜è¿°ã€‚<br>
+
+ã“ã®è¬›ç¾©ã®æ¨™æº–ã¯<tt> "C:\home\ecs1" </tt>ã«ã—ã‚ˆã†ã€‚<br>
+
+<!--<font color="maroon">Choose short-cut tab and write the path to the folder where we will put data files.<br>
+
+Our recommendation, standard setting of this course, is <tt>"C:\home\ecs1"</tt>.</font>--><p> 
+
+
+
+<img src="imgs/setup-2.png"><p>
+
+
+
+<a href="HowtoGNUPLOT-01.html">æ¬¡ã¸(next)</a>ãƒ»<a href="Toc.html">ç›®æ¬¡(toc)</a>
+
+</body>
+
+</html>
+
+
