--- a/index.html
+++ b/index.html
@@ -481,6 +481,6 @@ gnuplot> replot</pre>
       本日のレポートは、<font color="red" size="+2"><strong>提出する必要はない</strong></font>。次回からのレポートは、<font color="red" size="+2"><strong>担当教員の指示に従うこと。</strong></font>
     </p>
     <hr>
-    本項目担当：川口 聡(234号室, 本棟2F)</a>
+    本項目担当：山田　恭史(R655号室, 研究棟6F)</a>
   </body>
 </html>
