--- a/HowtoGNUPLOT/Toc.html
+++ b/HowtoGNUPLOT/Toc.html
@@ -122,11 +122,12 @@
 
   <hr>
 
-    <a href="../c_test.html">演習環境の確認のページへ戻る</a>　
+    <a href="https://yamadaya-lab.github.io/ECS/">演習環境の確認のページへ戻る</a>　
 
     </body>
 
 </html>
+
 
 
 
