--- a/HowtoGNUPLOT/Toc_hasegawa.html
+++ b/HowtoGNUPLOT/Toc_hasegawa.html
@@ -79,11 +79,12 @@
 
     <hr>
 
-    <a href="../index.html">複雑系科学演習 I のページへ戻る</a>　
+    <a href="https://yamadaya-lab.github.io/ECS/">複雑系科学演習 I のページへ戻る</a>　
 
     </body>
 
 </html>
+
 
 
 
