--- a/tips/graph.html
+++ b/tips/graph.html
@@ -134,7 +134,7 @@
 
       <hr>
 
-    <a href="../c_test.html">演習環境の確認のページへ戻る</a>　　
+    <a href="https://yamadaya-lab.github.io/ECS/">演習環境の確認のページへ戻る</a>　　
 
        
 
@@ -142,4 +142,5 @@
 
 
 </html>
+
 
