--- a/index.html
+++ b/index.html
@@ -413,7 +413,7 @@ gnuplot> set output "ctest1.png"
 gnuplot> replot</pre>
     <p>
       これで、演習用ディレクトリに  <span>ctest1.png</span>というグラフの図が書き出されます。<br>
-      レポートに貼り付けるには、OpenOffice Writer→[挿入]を利用して下さい。
+      適宜レポートにpngファイルを貼り付けて下さい。
     </p>
     <p>
       なお、もとの状態（画面上でのグラフ描画）に戻るには、
