--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <h2>演習環境の確認</h2>
     <hr>
 
-    まずはじめに、本演習で使用するC言語やOpenOfficeの環境が整っているかの確認を行います。<br>
+    まずはじめに、本演習で使用するC言語の環境が整っているかの確認を行います。<br>
     LINUX上での作業を想定して説明します。手順は以下の通りです。
 
     <ol>
@@ -467,12 +467,12 @@ gnuplot> replot</pre>
 	<li>考察</li>
       </ol>
     </div>
-    <p>について、OpenOffice Writerを利用してレポートを作成してください。
+    <p>について、TexまたはWordを利用してレポートを作成してください。
     </p>
     <h3>7. 印刷</h3>
     <p>
-      OpenOfficeで作成したレポートを、PDFへ書き出し、印刷してください。<br>
-      レポートをPDF形式に変換するには、[ファイル]→[PDFとしてエクスポート] を利用して下さい。
+      TexまたはWordで作成したレポートを、PDFへ書き出し、印刷してください。<br>
+      レポートをPDF形式に変換するには、[ファイル]→[PDFとしてエクスポート] 等を利用して下さい。
     </p>
     </p>
 
