--- a/HowtoGNUPLOT/Toc_hasegawa.html
+++ b/HowtoGNUPLOT/Toc_hasegawa.html
@@ -35,6 +35,9 @@
 
 	<li><a href="HowtoGNUPLOT-04.html">とにかくプロット</a> <font color="maroon">Simple plot at first</font> <tt>plot x</tt></li>
 
+	<li>プロットと実線を引く<font color="maroon">Simple plot at first</font> <tt>plot x with line</tt></li>
+		  
+
 	<li><a href="HowtoGNUPLOT-05.html">横軸の描画範囲の指定</a> <font color="maroon">Range of abscissa</font>  <tt>plot [AAA:BBB] x</tt></li>
 
 	<li><a href="HowtoGNUPLOT-06.html">縦軸の描画範囲の指定</a> <font color="maroon">Range of ordinate</font>  <tt>plot [AAA:BBB][CCC:DDD] x</tt></li>
@@ -84,6 +87,7 @@
     </body>
 
 </html>
+
 
 
 
