--- a/HowtoGNUPLOT/Toc_hasegawa.html
+++ b/HowtoGNUPLOT/Toc_hasegawa.html
@@ -35,7 +35,7 @@
 
 	<li><a href="HowtoGNUPLOT-04.html">とにかくプロット</a> <font color="maroon">Simple plot at first</font> <tt>plot x</tt></li>
 
-	<li>プロットと実線を引く<font color="maroon">Simple plot at first</font> <tt>plot x with line</tt></li>
+	<li><a href="HowtoGNUPLOT-04.html">プロットと実線を引く</a><font color="maroon">Simple plot at first</font> <tt>plot x with line</tt></li>
 		  
 
 	<li><a href="HowtoGNUPLOT-05.html">横軸の描画範囲の指定</a> <font color="maroon">Range of abscissa</font>  <tt>plot [AAA:BBB] x</tt></li>
@@ -87,6 +87,7 @@
     </body>
 
 </html>
+
 
 
 
