--- a/HowtoGNUPLOT/Toc.html
+++ b/HowtoGNUPLOT/Toc.html
@@ -41,6 +41,8 @@
       <table><border="0">
 
 	<tr><td><a href="HowtoGNUPLOT-04.html">・とにかくプロット</a></td><td>   <tt>plot x</tt></td></tr>
+		  
+	<tr><td><a href="HowtoGNUPLOT-04.html">・プロットと実線を引く</a></td><td>   <tt>plot x with line</tt></td></tr>
 
 	<tr><td><a href="HowtoGNUPLOT-05.html">・横軸の描画範囲の指定</a></td><td>   <tt>plot [AAA:BBB] x</tt></td></tr>
 
@@ -127,6 +129,7 @@
     </body>
 
 </html>
+
 
 
 
